[gd_scene load_steps=2 format=3 uid="uid://bmtbrg1je2nr3"]

[ext_resource type="Script" path="res://scenes/manager/enemy/enemy_manager.gd" id="1_wcdca"]

[node name="EnemyManager" type="Node"]
script = ExtResource("1_wcdca")
spawn_delay = 0.3

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[node name="WaveIncomingTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
